alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ h4 {
   color: #faff00;
 }
 
+.text-green {
+  color: #317539;
+}
+
 .container-custom {
   margin: auto;
   width: 70%;
@@ -56,7 +60,7 @@ h4 {
   width: 80%;
   height: auto;
   border-radius: 10px;
-  box-shadow: 10px 10px #fff;
+  box-shadow: 10px 10px #4cc481;
 }
 
 .b-radius {
@@ -64,7 +68,7 @@ h4 {
 }
 
 .info-text {
-    font-size: 22px;
+    font-size: 16px;
     font-weight: bold;
 }
 
@@ -111,4 +115,105 @@ h4 {
 
 #tg-2, #tg-4, #tg-6 {
     margin-left: -45px;
+}
+
+.about-card {
+  text-align: -webkit-center;
+}
+
+.card {
+  background-color: #1a1a1a;
+  border-radius: 20px;
+  border: 4px solid #fff;
+}
+
+.card-top {
+  background-color: #015928;
+  padding: 20px 0px;
+  border-radius: 20px;
+}
+
+.card-body {
+  padding: 0;
+}
+
+.instructor-image {
+  border: 5px solid #faff00;
+  border-radius: 50%;
+  width: 50%;
+  height: auto;
+}
+
+.instructor-image img{
+  border-radius: 50%;
+}
+
+.register-link-wrapper {
+  text-align: center;
+  padding: 25px;
+  font-size: 30px;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+}
+
+.register-link {
+  background-color: white;
+    width: 32%;
+    padding: 18px;
+    border-radius: 50px;
+}
+
+.register-link-wrapper a {
+  text-decoration: none;
+  color: #000;
+}
+
+.special-text-learning {
+  background-color: white;
+  border-radius: 20px;
+  padding-bottom: 4px;
+}
+
+.special-text-learning p {
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.grab-your-spot {
+  margin-top: 4rem;
+}
+
+.f-22 {
+  font-size: 22px;
+  font-weight: 500;
+  color: #002b13;
+}
+
+footer {
+  margin-top: 100px;
+  background-color: #fff;
+  padding: 14px 0px 7px;
+  color: #000;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.accordion-button:not(.collapsed) {
+  color: inherit;
+  background-color: #c3df9d;
+}
+
+.accordion-button:focus {
+  border-color: unset;
+  box-shadow: unset;
+}
+
+.accordian-item {
+  border-radius: 0.25rem  
+}
+
+.w-63 {
+  width: 63%;
 }
